--- a/css/style.css
+++ b/css/style.css
@@ -113,9 +113,6 @@ footer {
         text-transform: uppercase;
         text-align: center;
         padding-top: 80px;
-        animation-duration: 2s;
-        animation-name: aparecer;
-        animation-iteration-count:initial;
     }
 
     .textohome {
@@ -127,19 +124,6 @@ footer {
        background-color: white;
        padding: 8px;
        border-radius: 3px;
-       animation-duration: 2s;
-       animation-name: aparecer;
-       animation-iteration-count:initial;
-    }
-    
-    @keyframes aparecer {
-        0% {
-            opacity:0;
-        }
-        100% {
-            opacity:1;
-        }
-        
     }
 
     .textohome2 {
@@ -212,9 +196,6 @@ footer {
        font-size: 30px;
        text-align: center;
        padding-top: 200px;
-       animation-duration: 2s;
-       animation-name: aparecer;
-       animation-iteration-count:initial;
     }
 
     #sectionyoga1 {
@@ -304,42 +285,22 @@ footer {
 /*contacto*/
 .portadacontacto {
     width: 100%;
-    height: 550px;
-    background: linear-gradient(to bottom, #E5E1DC, #e7eaf2,#bbcdce);
-    background-position: relative;
-}
-
-.contacto {
-    background-color:#bbcdce;
-    padding: 20px;
-    position: absolute;
-    text-align: right;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    margin: 100px;
-    color:white;
-    animation-duration: 3s;
-    animation-name: formulario;
-}
-
-@keyframes formulario {
-    0% {
-        opacity:0;
-        margin:0;
-    }
-    100% {
-        opacity:1;
-        margin:100px;
-    }
-}
-
-fieldset {
-    border: white;
-}
-
-input {
-    border: white;
-}
+    height: 600px;
+    background-image: url(../images/sand-surface-texture-background-art-of-balance-concept.jpg);
+    background-position:center;
+    background-size: cover;
+ }
+ 
+ .contacto {
+     background-color:#bbcdce;
+     padding: 20px;
+     position: absolute;
+     text-align: right;
+     margin: 100px;
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     font-size: 20px;
+     color:white;
+ }
 
 /*footer*/
     footer{
