--- a/css/stylenuevo.css
+++ b/css/stylenuevo.css
@@ -1,48 +1,193 @@
+/*header*/
 header {
     background-color: #E5E1DC;
-    justify-content: space-between;
-}
+ }
 
 .navbar-toggler,
 .navbar-toggler-icon,
 .nav-link {
     color:white;
+    border:none;
 }
 
+.nav-link:hover {
+    color: white;
+    font-weight: bolder;
+}
+/*portadas*/
 .carousel-item {
     max-height: 500px;
 }
 
-.card-body {
-    font-size: 16px;
-    text-align: center;
-    margin:50px;
-}
-
-.card-img-overlay {
-    color:rgb(53, 103, 87);
-    font-size: 25px;
-    padding-top: 250px;
-    padding-left: 100px;
-}
-
-#portadahola {
+#portadahola,
+#portadayoga {
     border: none;
 }
 
-#cardhola {
-    margin:20px;
-}
+.portadacontacto {
+    width: 100%;
+    height: 550px;
+    background: linear-gradient(to bottom, #E5E1DC, #e7eaf2,#bbcdce);
+    background-position: relative;
+ }
 
 footer {
     background-color: #E5E1DC;
 }
 
-@media (max-width: 576px) {
-    .card-body {
-        font-size: 12px;
+@media screen and (max-width: 576px) {
+/*home*/
+    #card-home {
+        margin:20px;
+    }
+    #textohome {
         text-align: center;
-        margin: 5px;
+        font-size: 12px;
+    }
+/*hola*/
+    #cardhola,
+    #cardfeng,
+    #cardfeng2,
+    #cardfeng3 {
+        margin:20px;
+        font-size: 12px;
+        text-align:center;
+        color:rgb(102, 102, 102);
+        background: rgb(236, 241, 236);
+    }
+/*yoga*/
+    #tituloyoga {
+        font-family:Arial, Helvetica, sans-serif;
+        color:white;
+        font-size: 20px;
+        text-align: center;
+        padding-top: 100px;
+    }
+
+    #sectionyoga {
+        font-size:10px;
+        padding: 15px;
+        row-gap: 20px;
+    }
+
+    #card-yoga1,
+    #card-yoga2,
+    #card-yoga3 {
+        align-items: center;
+        color:grey;
+        background-color: #f4f5f8;
+        text-align: center;
+    }
+
+    .asanas {
+        height: 250px;
+        width: 180px;
+        padding-bottom: 10px;
+        border-radius: 6px;
+    }
+
+    .contacto {
+        width: 280px;
+        height: 400px;
+        margin: 10px;
+        padding: 20px;
+        position:absolute;
+        text-align: left;
+        color:cadetblue;
+        font-size: 12px;
+    }
+    
+    .btn {
+        background-color: cadetblue;
+        border: none;
     }
 }
 
+@media screen and (min-width: 576px) {
+/*home*/
+    #card-home {
+        margin:50px;
+    }
+    
+    #textohome {
+    text-align: center;
+    font-size: 16px;
+    }
+/*hola*/
+    #titulohola {
+    font-family:Arial, Helvetica, sans-serif;
+    color:rgb(53, 103, 87);
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: left;
+    padding-top: 400px;
+    padding-left: 50px;
+    }
+
+#cardhola,
+#cardfeng,
+#cardfeng2,
+#cardfeng3 {
+    margin:20px;
+    color:rgb(102, 102, 102);
+    background: rgb(236, 241, 236);
+}
+
+#textohola {
+    font-size: 16px;
+    text-align: center;
+    margin:50px;
+}
+/*yoga*/
+#tituloyoga {
+    font-family:Arial, Helvetica, sans-serif;
+    color:white;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 200px;
+}
+
+#sectionyoga {
+    padding: 20px;
+    row-gap: 10px;
+}
+
+#card-yoga1,
+#card-yoga2,
+#card-yoga3 {
+    align-items: center;
+    color:grey;
+    background-color: #f4f5f8;
+    padding-bottom: 20px;
+}
+
+.asanas {
+    height: 400px;
+    width: 300px;
+    border-radius: 8px;
+}
+/*feng*/
+#titulofeng {
+    font-family:Arial, Helvetica, sans-serif;
+    color:white;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 200px;
+}
+/*contacto*/
+.contacto {
+    width: 500px;
+    height: 450px;
+    margin-top: 30px;
+    margin-left:100px;
+    padding: 20px;
+    position:absolute;
+    text-align: left;
+    color:cadetblue;
+}
+
+.btn {
+    background-color: cadetblue;
+    border: none;
+}
+}
