--- a/css/stylenuevo.css
+++ b/css/stylenuevo.css
@@ -1,349 +1,396 @@
 /*header*/
 header {
-    background-color: #E5E1DC;
+  background-color: #E5E1DC;
+}
+header .navbar-toggler,
+header .navbar-toggler-icon,
+header .nav-link {
+  color: white;
+  border: none;
+}
+header .navbar-toggler:hover,
+header .navbar-toggler-icon:hover,
+header .nav-link:hover {
+  color: white;
+  font-weight: bolder;
 }
 
 .navbar,
 #tituloyoga,
 #titulohola,
 #titulofeng {
-    animation-duration: 2s;
-    animation-name: aparecer;
-    animation-iteration-count:initial;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-name: aparecer;
+          animation-name: aparecer;
+  -webkit-animation-iteration-count: initial;
+          animation-iteration-count: initial;
 }
- 
+
+@-webkit-keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes aparecer {
-    0% {
-        opacity:0;
-    }
-    100% {
-        opacity:1;
-    }
-    
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-
-.navbar-toggler,
-.navbar-toggler-icon,
-.nav-link {
-    color:white;
-    border:none;
-}
-
-.nav-link:hover {
-    color: white;
-    font-weight: bolder;
-}
-
 /*portadas*/
 .carousel-item {
-    max-height: 500px;
+  max-height: 500px;
 }
 
 #portadahola,
 #portadayoga {
-    border: none;
+  border: none;
 }
 
 /*home*/
 #card-links,
 #card-links2 {
-    background-color:#f1f3f7;
+  background-color: rgb(236, 241, 236);
+}
+#card-links .btn,
+#card-links2 .btn {
+  background-color: cadetblue;
+  border: none;
+}
+#card-links .btn:hover,
+#card-links2 .btn:hover {
+  background-color: rgb(53, 103, 87);
 }
 
 /*yoga*/
 .animacionyoga {
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
-    margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 10px;
+}
+.animacionyoga .pelotitas {
+  -webkit-animation: yoga 5s infinite ease-in-out;
+          animation: yoga 5s infinite ease-in-out;
+}
+.animacionyoga .pelotitas .pelotitas:nth-child(1) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+.animacionyoga .pelotitas .pelotitas:nth-child(2) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+.animacionyoga .pelotitas .pelotitas:nth-child(3) {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+.animacionyoga .pelotitas .pelotitas:nth-child(4) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+.animacionyoga .pelotitas .pelotitas:nth-child(5) {
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
 }
 
-.pelotitas {
-    animation: yoga 5s infinite ease-in-out;
-}
-
-.pelotitas:nth-child(1) {
-    animation-delay: 0.5s;
-}
-
-.pelotitas:nth-child(2) {
-    animation-delay: 1s;
-}
-
-.pelotitas:nth-child(3) {
-    animation-delay: 1.5s;
-}
-
-.pelotitas:nth-child(4) {
-    animation-delay: 2s;
-}
-
-.pelotitas:nth-child(5) {
-    animation-delay: 2.5s;
+@-webkit-keyframes yoga {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
 }
 
 @keyframes yoga {
-	0%,
-	100% {
-		opacity: 0;
-	}
-    
-    50% {
-		opacity: 1;
-	}
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
 }
-
 /*feng*/
 .pelotita {
-    animation: animacionfeng 6s linear 0s infinite normal forwards;
+  -webkit-animation: animacionfeng 6s linear 0s infinite normal forwards;
+          animation: animacionfeng 6s linear 0s infinite normal forwards;
+}
+
+@-webkit-keyframes animacionfeng {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes animacionfeng {
-	0% {
-		transform: rotate(0);
-	}
-
-	100% {
-		transform: rotate(360deg);
-	}
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
 /*contacto*/
 .portadacontacto {
-    width: 100%;
-    height: 550px;
-    background: linear-gradient(to bottom, #E5E1DC, #e7eaf2,#bbcdce);
-    background-position: relative;
+  width: 100%;
+  height: 550px;
+  background: linear-gradient(to bottom, #E5E1DC, #e7eaf2, #bbcdce);
+  background-position: relative;
+}
+.portadacontacto .contacto {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-name: formulario;
+          animation-name: formulario;
+}
+.portadacontacto .contacto .btn {
+  background-color: cadetblue;
+  border: none;
+}
+.portadacontacto .contacto .btn:hover {
+  background-color: rgb(53, 103, 87);
 }
 
-.contacto {
-    animation-duration: 3s;
-    animation-name: formulario;
+@-webkit-keyframes formulario {
+  0% {
+    opacity: 0;
+    margin-top: 0;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 30px;
+  }
 }
 
 @keyframes formulario {
-   0% {
-       opacity:0;
-       margin-top:0;
-   }
-   100% {
-       opacity:1;
-       margin-top:30px;
-   }  
-}
-
-.btn {
-    background-color: cadetblue;
-    border: none;
-}
-
-.btn:hover {
-    background-color:rgb(53, 103, 87);
+  0% {
+    opacity: 0;
+    margin-top: 0;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 30px;
+  }
 }
 /*footer*/
 footer {
-    background-color: #E5E1DC;
-    height: 100px;
-    padding-top: 30px;
+  background-color: #E5E1DC;
+  height: 100px;
+  padding-top: 30px;
 }
 
 @media screen and (max-width: 576px) {
-/*home*/
-    #card-home {
-        margin:20px;
-    }
+  /*home*/
+  #card-home {
+    margin: 20px;
+  }
+  #card-home #textohome {
+    text-align: center;
+    font-size: 12px;
+  }
 
-    #textohome {
-        text-align: center;
-        font-size: 12px;
-    }
+  #homeextra {
+    margin: 15px;
+    row-gap: 10px;
+  }
 
-    #homeextra {
-        margin:15px;
-        row-gap: 10px;
-    }
+  /*hola*/
+  #titulohola {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+    font-size: 20px;
+    text-align: center;
+    color: rgb(53, 103, 87);
+  }
 
-/*hola*/
-    #cardhola,
-    #cardfeng,
-    #cardfeng2,
-    #cardfeng3 {
-        margin:20px;
-        font-size: 12px;
-        text-align:center;
-        color:rgb(102, 102, 102);
-        background: rgb(236, 241, 236);
-    }
-    
-/*yoga*/
-    #tituloyoga {
-        font-family:Arial, Helvetica, sans-serif;
-        color:white;
-        font-size: 20px;
-        text-align: center;
-        padding-top: 30px;
-    }
+  #cardhola,
+#cardfeng,
+#cardfeng2,
+#cardfeng3 {
+    margin: 20px;
+    font-size: 12px;
+    text-align: center;
+    color: rgb(102, 102, 102);
+    background: rgb(236, 241, 236);
+  }
 
-    .pelotitas {
-        margin:10px;
-        width: 30px;
-        height: 30px;
-    }
+  /*yoga*/
+  #tituloyoga {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 30px;
+  }
 
-    .pelotita {
-        width: 30px;
-        height: 30px;
-    }
+  .titulo-yogasection {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+    font-size: 20px;
+    text-align: center;
+    color: rgb(53, 103, 87);
+  }
 
-    #sectionyoga {
-        font-size:10px;
-        padding: 10px;
-        row-gap: 20px;
-    }
+  .pelotitas {
+    margin: 10px;
+    width: 30px;
+    height: 30px;
+  }
 
-    .titulo-yogasection {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 20px;
-        font-size: 20px;
-        text-align: center;
-        color:rgb(53, 103, 87);
-    }
+  .pelotita {
+    width: 30px;
+    height: 30px;
+  }
 
-    #card-yoga1,
-    #card-yoga2,
-    #card-yoga3 {
-        display:flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        color:grey;
-        background-color: #f4f5f8;
-        text-align:justify;
-    }
+  #sectionyoga {
+    font-size: 10px;
+    padding: 10px;
+    row-gap: 20px;
+  }
+  #sectionyoga #card-yoga1,
+#sectionyoga #card-yoga2,
+#sectionyoga #card-yoga3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    color: rgb(102, 102, 102);
+    background-color: #f4f5f8;
+    text-align: justify;
+  }
+  #sectionyoga #card-yoga1 .asanas,
+#sectionyoga #card-yoga2 .asanas,
+#sectionyoga #card-yoga3 .asanas {
+    height: 200px;
+    width: 150px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 6px;
+  }
 
-    .asanas {
-        height: 200px;
-        width: 150px;
-        padding-right: 10px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-radius: 6px;
-    }
-
-    /*contacto*/
-    .contacto {
-        width: 280px;
-        height: 400px;
-        padding: 20px;
-        margin-top: 30px;
-        position:absolute;
-        text-align: left;
-        color:cadetblue;
-        font-size: 12px;
-    }
+  /*contacto*/
+  .contacto {
+    width: 280px;
+    height: 400px;
+    padding: 20px;
+    margin-top: 30px;
+    position: absolute;
+    text-align: left;
+    color: cadetblue;
+    font-size: 12px;
+  }
 }
-
 @media screen and (min-width: 576px) {
-/*home*/
-    #card-home {
-        margin:50px;
-    }
-    
-    #textohome {
+  /*home*/
+  #card-home {
+    margin: 50px;
+  }
+  #card-home #textohome {
     text-align: center;
     font-size: 16px;
-    }
+  }
 
-    #homeextra {
-        margin:20px;
-        row-gap: 10px;
-        justify-content: space-around;
-    }
+  #homeextra {
+    margin: 20px;
+    row-gap: 10px;
+    justify-content: space-around;
+  }
 
-/*hola*/
-    #titulohola {
-    font-family:Arial, Helvetica, sans-serif;
-    color:rgb(53, 103, 87);
+  /*hola*/
+  #titulohola {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 50px;
     font-size: 30px;
-    text-transform: uppercase;
+    text-align: center;
+    color: rgb(53, 103, 87);
+  }
+
+  #textohola {
+    font-size: 16px;
+    text-align: center;
+    margin: 50px;
+  }
+
+  #cardhola,
+#card-links,
+#card-links2,
+#cardfeng,
+#cardfeng2,
+#cardfeng3 {
+    margin: 50px;
+    color: rgb(102, 102, 102);
+    background: rgb(236, 241, 236);
+  }
+
+  /*yoga*/
+  #tituloyoga {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 200px;
+  }
+
+  .titulo-yogasection {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 50px;
+    font-size: 30px;
+    text-align: center;
+    color: rgb(53, 103, 87);
+  }
+
+  .pelotitas {
+    margin: 30px;
+    width: 60px;
+    height: 60px;
+  }
+
+  .pelotita {
+    width: 60px;
+    height: 60px;
+  }
+
+  #sectionyoga {
+    padding: 20px;
+    row-gap: 10px;
+  }
+  #sectionyoga #card-yoga1,
+#sectionyoga #card-yoga2,
+#sectionyoga #card-yoga3 {
+    align-items: center;
+    color: rgb(102, 102, 102);
+    background-color: #f4f5f8;
+    padding-bottom: 20px;
+  }
+  #sectionyoga #card-yoga1 .asanas,
+#sectionyoga #card-yoga2 .asanas,
+#sectionyoga #card-yoga3 .asanas {
+    height: 400px;
+    width: 300px;
+    border-radius: 8px;
+  }
+
+  /*contacto*/
+  .contacto {
+    width: 500px;
+    height: 450px;
+    margin-left: 100px;
+    margin-top: 30px;
+    padding: 20px;
+    position: absolute;
     text-align: left;
-    padding-top: 400px;
-    padding-left: 50px;
-    }
-
-    #textohola {
-        font-size: 16px;
-        text-align: center;
-        margin:50px;
-    }
-
-    #cardhola,
-    #card-links,
-    #card-links2,
-    #cardfeng,
-    #cardfeng2,
-    #cardfeng3 {
-        margin: 50px;
-        color:rgb(102, 102, 102);
-        background: rgb(236, 241, 236);
-    }
-
-/*yoga*/
-    #tituloyoga {
-        font-family:Arial, Helvetica, sans-serif;
-        color:white;
-        font-size: 30px;
-        text-align: center;
-        padding-top: 200px;
-    }
-    #sectionyoga {
-        padding: 20px;
-        row-gap: 10px;
-    }
-    
-    .titulo-yogasection {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 50px;
-        font-size: 30px;
-        text-align: center;
-        color:rgb(53, 103, 87)
-    }
-    
-    .pelotitas {
-        margin:30px;
-        width: 60px;
-        height: 60px;
-    }
-    
-    .pelotita {
-        width: 60px;
-        height: 60px;
-    }
-    
-    #card-yoga1,
-    #card-yoga2,
-    #card-yoga3 {
-        align-items: center;
-        color:grey;
-        background-color: #f4f5f8;
-        padding-bottom: 20px;
-    }
-    
-    .asanas {
-        height: 400px;
-        width: 300px;
-        border-radius: 8px;
-    }
-
-/*contacto*/
-    .contacto {
-        width: 500px;
-        height: 450px;
-        margin-left:100px;
-        margin-top: 30px;
-        padding: 20px;
-        position:absolute;
-        text-align: left;
-        color:cadetblue;
-    }
-}
+    color: cadetblue;
+  }
+}/*# sourceMappingURL=stylenuevo.css.map */
