Desafio SASS II SEO

--- a/css/_colores.scss
+++ b/css/_colores.scss
@@ -4,4 +4,6 @@ $color3: #f4f5f8;
 $color4: rgb(53, 103, 87);
 $color5: white;
 $color6: cadetblue;
-$color7: rgb(102, 102, 102);
+$color7: #666666;
+
+$paleta:(fuego:#CEC4C1, tierra:#96A69B, metal:#DDE1E0, agua:#637388, madera:#E5DECC);
