--- a/css/stylenuevo.scss
+++ b/css/stylenuevo.scss
@@ -4,6 +4,10 @@
 /*header*/
 header {
     background-color:$color1;
+    img {
+        width: 130px;
+        height: 40px;
+    }
     .navbar-toggler,
     .navbar-toggler-icon,
     .nav-link {
@@ -16,13 +20,16 @@ header {
     }
 }
 
-.navbar,
-#tituloyoga,
-#titulohola,
-#titulofeng {
+.navbar {
     animation-duration: 2s;
     animation-name: aparecer;
     animation-iteration-count:initial;
+}
+
+#tituloyoga,
+#titulohola,
+.titulo-yogasection {
+    @extend .navbar;
 }
  
 @keyframes aparecer {
@@ -50,11 +57,7 @@ header {
 #card-links2 {
     background-color:$color2;
     .btn {
-        background-color: $color6;
-        border: none;
-        &:hover {
-            background-color: $color4;
-        }
+        @include botones;
     }
 }
 
@@ -64,23 +67,26 @@ header {
     justify-content:space-evenly;
     align-items: center;
     margin-top: 10px;
-    .pelotitas {
-        animation: yoga 5s infinite ease-in-out;
-        .pelotitas:nth-child(1) {
-            animation-delay: 0.5s;
-        }
-        .pelotitas:nth-child(2) {
-            animation-delay: 1s;
-        }
-        .pelotitas:nth-child(3) {
-            animation-delay: 1.5s;
-        }
-        .pelotitas:nth-child(4) {
-            animation-delay: 2s;
-        }
-        .pelotitas:nth-child(5) {
-            animation-delay: 2.5s;
-        }
+    animation: yoga 5s infinite ease-in-out;
+    div:nth-child(1) {
+        animation-delay: 0.5s;
+        background-color: map-get($map: $paleta, $key: fuego);
+    }
+    div:nth-child(2) {
+        animation-delay: 1s;
+        background-color: map-get($map: $paleta, $key: tierra);
+    }
+    div:nth-child(3) {
+        animation-delay: 1.5s;
+        background-color: map-get($map: $paleta, $key: agua);
+    }
+    div:nth-child(4) {
+        animation-delay: 2s;
+        background-color: map-get($map: $paleta, $key: metal);
+    }
+    div:nth-child(5) {
+        animation-delay: 2.5s;
+        background-color: map-get($map: $paleta, $key: madera);
     }
 }
 
@@ -120,11 +126,7 @@ header {
         animation-duration: 3s;
         animation-name: formulario;
         .btn {
-            background-color: $color6;
-            border: none;
-            &:hover {
-                background-color: $color4;
-            }
+            @include botones;
         }
     }
 }
@@ -142,9 +144,13 @@ header {
 
 /*footer*/
 footer {
-    background-color: $color1;
+    @extend header;
     height: 100px;
     padding-top: 30px;
+    img {
+        width: 25px;
+        height: 25px;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -163,6 +169,7 @@ footer {
     }
 
 /*hola*/
+
 #titulohola {
     @include titulosS;
 }
@@ -176,6 +183,9 @@ footer {
         text-align:center;
         color:$color7;
         background: $color2;
+        .btn {
+            @include botones;
+        }
     }
     
 /*yoga*/
@@ -188,13 +198,18 @@ footer {
     }
 
     .titulo-yogasection {
-        @include titulosS;
+       @include titulosS;
     }
 
     .pelotitas {
-        margin:10px;
-        width: 30px;
-        height: 30px;
+        width:40px;
+        height: 40px;
+        border-radius: 50%;
+        img {
+            width: 30px;
+            height: 30px;
+            margin: 5px;
+        }
     }
 
     .pelotita {
@@ -276,6 +291,9 @@ footer {
         margin: 50px;
         color:$color7;
         background: $color2;
+        .btn {
+            @include botones;
+        }
     }
 
 /*yoga*/
@@ -290,12 +308,18 @@ footer {
     .titulo-yogasection {
         @include titulosG;
     }
-    
+
     .pelotitas {
-        margin:30px;
-        width: 60px;
-        height: 60px;
+        width:80px;
+        height: 80px;
+        border-radius: 50%;
+        img {
+            width: 50px;
+            height: 50px;
+            margin: 15px;
+        }
     }
+
     
     .pelotita {
         width: 60px;
